# Cognet

./: .gitignore  README.md
backend/: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: lifespan.py  main.py
backend/app/api/: deps.py  middleware.py  router.py
backend/app/api/v1/: chat.py  connectors.py  context.py  health.py  insights.py  memory.py  webhooks.py
backend/app/application/: chat_usecase.py  memory_usecase.py
backend/app/config/: settings.py
backend/app/core/: cache.py  config.py  errors.py  identity.py
backend/app/core/agents/: __init__.py  base.py  critic.py  evolution.py  executor.py  executor_types.py  memory.py  orchestrator.py  performance.py  planner.py  selector.py
backend/app/core/ai/: __init__.py  embedding.py  llm.py  prompt.py
backend/app/core/auth/: __init__.py  jwt.py
backend/app/core/autonomous/: __init__.py  brain.py  executor.py  runner.py  safety.py  trigger.py
backend/app/middleware/: auth.py  logging.py  rate_limit.py
backend/app/schemas/: chat.py  context.py  memory.py
backend/app/utils/: logger.py
backend/cli/: main.py
backend/docs/: ARCHITECTURE.md  README.md
backend/tests/: test_agent_evolution.py  test_agents.py  test_auth.py  test_autonomous_engine.py  test_chat.py  test_classifier.py  test_cognition.py  test_context_formatter.py  test_intent_fusion.py  test_multi_agent_system.py  test_phase10.py  test_phase9.py  test_prediction_engine.py  test_rate_limit.py  test_reasoning_engine.py  test_semantic_retrieval.py  test_temporal_intelligence.py
(+83 files in other folders)
