[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognet-backend"
version = "0.1.0"
description = "Cognet backend service"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pymongo",
  "requests",
  "uvicorn[standard]",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
